# jupyterlab-datalogs

./: .copier-answers.yml  .eslintrc.json  .gitignore  CHANGELOG.md  LICENSE  README.md  datalogger_jupyterlab.py  install.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
.github/workflows/: ci.yml  github-pages.yml
datalogger_jupyterlab/: __init__.py
jupyterlab_datalogger/: __init__.py
schema/: copy-datalogger-load-code.json  datalogger-load-code-plugin.json  datalogger-load-code.json  load-with-datalogger.json  plugin.json
src/: constants.ts  index.ts  svg.d.ts  types.ts  webpack.d.ts
src/icons/: index.ts
src/plugins/: dataloggerLoadCodePlugin.ts  index.ts  loadWithDataLoggerPlugin.ts  netcdfFileTypePlugin.ts  openWarningPlugin.ts  pdfPreviewPlugin.ts  pdfPreviewPlugin.tsx
src/utils/: addToActiveCell.ts  addToNotebook.ts  calcPdfPreviewPosition.tsx  generateLoadCode.ts  index.ts
