[project]
name = "datalogger-jupyterlab"
version = "0.1.0"
description = "JupyterLab extension for DataLogger."
authors = [
  { name = "Alex Hadley", email = "alexhad6@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = [
  "jupyter",
  "jupyterlab",
  "jupyterlab-extension"
]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9,<3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/PainterQubits/datalogger-jupyterlab"
Repository = "https://github.com/PainterQubits/datalogger-jupyterlab"

[tool.hatch.build.targets.sdist]
artifacts = ["/datalogger_jupyterlab", "/labextension"]
exclude = ["**/*"]

[tool.hatch.build.targets.wheel.shared-data]
"labextension" = "share/jupyter/labextensions/datalogger-jupyterlab"
"install.json" = "share/jupyter/labextensions/datalogger-jupyterlab/install.json"

[tool.hatch.envs.default]
dependencies = [
  "jupyterlab>=4.0.7,<5",
  "flake8>=6.1.0,<7",
  "pylint>=3.0.0,<4",
  "mypy>=1.5.1,<2",
  "black>=23.9.1,<24",
]

[tool.hatch.envs.jupyterlab]
dependencies = [
  "jupyterlab>=4.0.7,<5",
  "datalogger>=0.1.1",
  "numpy>=1.26.0,<2",
  "xarray>=2023.9.0",
  "matplotlib>=3.8.0,<4",
]

[tool.hatch.envs.jupyterlab.env-vars]
PIP_EXTRA_INDEX_URL = "https://painterqubits.github.io/datalogger/releases"

[tool.hatch.envs.jupyterlab.scripts]
start = "jupyter lab"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
