[build-system]
requires = ["hatchling", "hatch-nodejs-version", "jupyterlab>=4.0.10,<5"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-datalogs"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
all = ["jupyterlab-datalogs[jupyterlab,analysis,plugins]"]
jupyterlab = ["jupyterlab>=4.0.10,<5"]
analysis = [
  "datalogs @ https://painterqubits.github.io/datalogs/latest.tar.gz",
  "numpy>=1.26.3,<2",
  "xarray>=2023.12.0",
  "matplotlib>=3.8.2,<4",
]
plugins = [
  "jupyterlab-display-name @ https://painterqubits.github.io/jupyterlab-display-name/latest.tar.gz",
  "jupyterlab-open-warning[rtc] @ https://painterqubits.github.io/jupyterlab-open-warning/latest.tar.gz",
  "jupyterlab-pdf-preview @ https://painterqubits.github.io/jupyterlab-pdf-preview/latest.tar.gz",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"labextension" = "share/jupyter/labextensions/jupyterlab-datalogs"
"install.json" = "share/jupyter/labextensions/jupyterlab-datalogs/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.8.3"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["labextension/package.json"]
skip-if-exists = ["labextension/package.json"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build"
npm = ["jlpm"]

[tool.hatch.envs.default]
description = "For running JupyterLab in development"
dependencies = [
  "jupyterlab>=4.0.10,<5",
  "jupyter-collaboration>=2.0.1,<3",
  "datalogs>=0.3.0",
  "numpy>=1.26.3,<2",
  "xarray>=2023.12.0",
  "matplotlib>=3.8.2,<4",
]

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://painterqubits.github.io/datalogs/releases"

[tool.hatch.envs.default.scripts]
dev = "jlpm dev"
build = "jlpm build"
clean = "jlpm clean"
lint = "jlpm lint"

[tool.hatch.envs.ci]
description = "For running jlpm in CI without building and installing this package"
detached = true
dependencies = ["jupyterlab>=4.0.10,<5"]
